# pico-icm20948

./: .gitignore  CMakeLists.txt  README.md
include/icm20948/: calibration.hpp  icm20948.hpp
src/: CMakeLists.txt  config_enums.hpp  errors.hpp  i2c.cpp  i2c.hpp  icm20948.cpp  math.hpp  vec3.hpp
src/core/: i2c.cpp  i2c.hpp  register_base.hpp  register_map.hpp  registers.hpp
src/registers/: magnetometer.hpp  reg_magnetometer.hpp  register_base.hpp  userbank0.hpp  userbank1.hpp  userbank2.hpp  userbank3.hpp
src/sensors/: accel.hpp  raw_data.hpp
tools/: CMakeLists.txt  calib_fw.cpp  calibration.py
tools/calibration_firmware/: CMakeLists.txt  calib_fw.cpp
tools/scripts/: accel_calib.py  gyro_accel_calib.py  gyro_calib.py  mag_collect_data.py  mag_get_calib_params.py
tools/scripts/common/: serial_data.py
